modified:   .github/workflows/debian-package.yml

--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -39,4 +39,15 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: sch-scripts-deb
-        path: ../*.deb
+        path: ./*.deb
+        if-no-files-found: warn
+        compression-level: 6
+        overwrite: false
+        include-hidden-files: false
+      env:
+        pythonLocation: /opt/hostedtoolcache/Python/3.13.2/x64
+        PKG_CONFIG_PATH: /opt/hostedtoolcache/Python/3.13.2/x64/lib/pkgconfig
+        Python_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
+        Python2_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
+        Python3_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
+        LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.13.2/x64/lib
