--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -23,6 +23,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential devscripts debhelper
 
+    - name: Fix script file permissions
+      run: |
+        find $GITHUB_WORKSPACE -name "*" -exec chmod +x {} \;
+
     - name: Create source tarball
       run: |
         cd $GITHUB_WORKSPACE
