--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -27,6 +27,9 @@ jobs:
       run: |
         find $GITHUB_WORKSPACE -name "*" -exec chmod +x {} \;
 
+    - name: Ensure debian/sch-scripts.install is not executable
+      run: chmod -x debian/sch-scripts.install
+
     - name: Create source tarball
       run: |
         cd $GITHUB_WORKSPACE
