--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -18,44 +18,26 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install build dependencies
+    - name: Install build dependencies and fix permissions
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential devscripts debhelper
-
-    - name: Fix script file permissions
-      run: |
         find $GITHUB_WORKSPACE -name "*" -exec chmod +x {} \;
+        chmod -x $GITHUB_WORKSPACE/debian/sch-scripts.install
 
-    - name: Ensure debian/sch-scripts.install is not executable
-      run: chmod -x debian/sch-scripts.install
-
-    - name: Create source tarball
+    - name: Create source tarball and build Debian package
       run: |
+        mkdir -p /tmp/debian-package
         cd $GITHUB_WORKSPACE
         VERSION=$(dpkg-parsechangelog --show-field Version | sed 's/-.*//')
         TARBALL="sch-scripts_${VERSION}.orig.tar.gz"
         git archive --format=tar.gz --prefix=sch-scripts/ -o $TARBALL HEAD
-        mkdir -p /tmp/debian-package
         mv $TARBALL /tmp/debian-package/
-
-    - name: Build Debian package
-      run: |
-        cd $GITHUB_WORKSPACE
         debuild -us -uc || true
         mv ../*.deb /tmp/debian-package/ || true
 
     - name: List workspace contents
       run: ls -al /tmp/debian-package
-
-    - name: Debug build process
-      run: |
-        echo "Listing contents of $GITHUB_WORKSPACE:"
-        ls -al $GITHUB_WORKSPACE
-        echo "Listing contents of parent directory:"
-        ls -al $GITHUB_WORKSPACE/..
-        echo "Listing contents of debian directory:"
-        ls -al $GITHUB_WORKSPACE/debian
 
     - name: Upload Debian package
       uses: actions/upload-artifact@v4
@@ -66,10 +48,3 @@ jobs:
         compression-level: 6
         overwrite: false
         include-hidden-files: false
-      env:
-        pythonLocation: /opt/hostedtoolcache/Python/3.13.2/x64
-        PKG_CONFIG_PATH: /opt/hostedtoolcache/Python/3.13.2/x64/lib/pkgconfig
-        Python_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
-        Python2_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
-        Python3_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
-        LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.13.2/x64/lib
