--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install build dependencies and fix permissions
+    - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential devscripts debhelper
         find $GITHUB_WORKSPACE -name "*" -exec chmod +x {} \;
         chmod -x $GITHUB_WORKSPACE/debian/sch-scripts.install
 
-    - name: Create source tarball and build Debian package
+    - name: Craate Debian package
       run: |
         mkdir -p /tmp/debian-package
         cd $GITHUB_WORKSPACE
@@ -44,8 +44,11 @@ jobs:
         Python3_ROOT_DIR: /opt/hostedtoolcache/Python/3.13.2/x64
         LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.13.2/x64/lib
 
-    - name: List workspace contents
-      run: ls -al /tmp/debian-package
+    - name: List Directories
+      run: |
+        ls -al /tmp/debian-package
+        ls -al $GITHUB_WORKSPACE
+
 
     - name: Upload Debian package
       uses: actions/upload-artifact@v4
