--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -18,12 +18,10 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install build dependencies and fix permissions
+    - name: Install build dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential devscripts debhelper
-        find $GITHUB_WORKSPACE -name "*" -exec chmod +x {} \;
-        chmod -x $GITHUB_WORKSPACE/debian/sch-scripts.install
 
     - name: Create source tarball and build Debian package
       run: |
