--- a/debian/rules
+++ b/debian/rules
@@ -5,9 +5,9 @@
 
 override_dh_install:
 	dh_install
-	chmod -x debian/sch-scripts.install
-	chmod -x share/sch-scripts/*.py
-	chmod -x share/sch-scripts/*.sh
+	chmod +x debian/sch-scripts.install
+	chmod +x share/sch-scripts/*.py
+	chmod +x share/sch-scripts/*.sh
 	echo "__version__='$(DEBVERS)'" > "$(CURDIR)/debian/sch-scripts/usr/share/sch-scripts/version.py"
 
 override_dh_installinit:
