--- a/share/applications/sch-scripts.desktop
+++ b/share/applications/sch-scripts.desktop
@@ -1,7 +1,7 @@
 #!/usr/bin/env xdg-open
 [Desktop Entry]
-Name=Classroom administration
-Name[el]=Διαχείριση ΣΕΠΕΗΥ
+Name=Classroom Administration
+Name[el]=Διαχείριση Σχολικής Τάξης
 Comment=sch-scripts: a collection of scripts for classroom administration
 Comment[el]=sch-scripts: μια συλλογή από βοηθήματα για τη διαχείριση εργαστηρίου υπολογιστών
 TryExec=/usr/sbin/sch-scripts
