--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,6 @@ Depends: ${misc:Depends},
  python3:any,
  python3-gi,
  setpriv | util-linux (>= 2.32.1-0.2)
-Recommends: ${misc:Recommends},
  dnsmasq,
  epoptes,
  ethtool,
@@ -34,8 +33,8 @@ Recommends: ${misc:Recommends},
  nfs-kernel-server,
  openssh-server,
  p7zip-rar,
- squashfs-tools,
- synaptic
+ squashfs-tools
+
 Description: Διαχείριση ΣΕΠΕΗΥ
  Παρέχει ένα σύνολο εξαρτήσεων για την αυτοματοποίηση της εγκατάστασης
  σχολικών εργαστηρίων, και ένα γραφικό περιβάλλον που υποστηρίζει διαχείριση
