--- a/debian/control
+++ b/debian/control
@@ -12,33 +12,35 @@ Homepage: https://github.com/Educational-Tools/Sch-Scripts
 Package: sch-scripts
 Architecture: all
 Pre-depends:
- epoptes,
- openssh-server
+epoptes,
+openssh-server
+
 Depends:
- bindfs,
- iputils-arping,
- libgtk-3-0,
- librsvg2-common,
- policykit-1,
- python3:any,
- python3-gi,
- setpriv | util-linux (>= 2.32.1-0.2)
- dnsmasq,
- epoptes,
- ethtool,
- hardinfo,
- ltsp,
- ltsp-binaries,
- net-tools,
- nfs-kernel-server,
- openssh-server,
- p7zip-rar,
- squashfs-tools
+bindfs,
+iputils-arping,
+libgtk-3-0,
+librsvg2-common,
+policykit-1,
+python3:any,
+python3-gi,
+setpriv | util-linux (>= 2.32.1-0.2)
+
+Depends: dnsmasq,
+epoptes,
+ethtool,
+hardinfo,
+ltsp,
+ltsp-binaries,
+net-tools,
+nfs-kernel-server,
+openssh-server,
+p7zip-rar,
+squashfs-tools
 
 Description: Διαχείριση ΣΕΠΕΗΥ
- Παρέχει ένα σύνολο εξαρτήσεων για την αυτοματοποίηση της εγκατάστασης
- σχολικών εργαστηρίων, και ένα γραφικό περιβάλλον που υποστηρίζει διαχείριση
- λογαριασμών χρηστών, δημιουργία εικονικού δίσκου LTSP κ.α.
- .
- Πολλά από τα συμπεριλαμβανόμενα βοηθήματα προσανατολίζονται σε LTSP
- εγκαταστάσεις, αλλά το πακέτο είναι χρήσιμο και χωρίς LTSP.
+Παρέχει ένα σύνολο εξαρτήσεων για την αυτοματοποίηση της εγκατάστασης
+σχολικών εργαστηρίων, και ένα γραφικό περιβάλλον που υποστηρίζει διαχείριση
+λογαριασμών χρηστών, δημιουργία εικονικού δίσκου LTSP κ.α.
+.
+Πολλά από τα συμπεριλαμβανόμενα βοηθήματα προσανατολίζονται σε LTSP
+εγκαταστάσεις, αλλά το πακέτο είναι χρήσιμο και χωρίς LTSP.
