--- a/debian/control
+++ b/debian/control
@@ -25,7 +25,10 @@ python3:any,
 python3-gi,
 setpriv | util-linux (>= 2.32.1-0.2)
 
-Depends: dnsmasq,
+Package: sch-scripts
+Architecture: all
+Depends:
+dnsmasq,
 epoptes,
 ethtool,
 hardinfo,
