--- a/debian/control
+++ b/debian/control
@@ -15,8 +15,6 @@ Pre-depends:
 epoptes,
 openssh-server
 
-Package: sch-scripts
-Architecture: all
 Depends:
 bindfs,
 iputils-arping,
@@ -25,20 +23,14 @@ librsvg2-common,
 policykit-1,
 python3:any,
 python3-gi,
-setpriv | util-linux (>= 2.32.1-0.2)
-
-Package: sch-scripts
-Architecture: all
-Depends:
+setpriv | util-linux (>= 2.32.1-0.2),
 dnsmasq,
-epoptes,
 ethtool,
 hardinfo,
 ltsp,
 ltsp-binaries,
 net-tools,
 nfs-kernel-server,
-openssh-server,
 p7zip-rar,
 squashfs-tools
 
