--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Depends:
     python3:any,
     python3-gi,
     python3-pip
-Description: Διαχείριση ΣΕΠΕΗΥ
+Description: Διαχείριση Σχολικού Συστήματος
  Παρέχει ένα σύνολο εξαρτήσεων για την αυτοματοποίηση της εγκατάστασης
  σχολικών εργαστηρίων, και ένα γραφικό περιβάλλον που υποστηρίζει διαχείριση
  λογαριασμών χρηστών, δημιουργία εικονικού δίσκου LTSP κ.α.
