modified:   etc/systemd/system/user-defaults.service 	modified:   install.sh

--- a/etc/systemd/system/user-defaults.service
+++ b/etc/systemd/system/user-defaults.service
@@ -1,12 +1,12 @@
----
-# This is the content for the /etc/systemd/system/user-defaults.service file.
 [Unit]
 Description=User Defaults Service
 After=graphical-session.target
+PartOf=graphical-session.target
 
 [Service]
-Type=simple
-User=%I
+Type=forking
+User=root
+
 ExecStart=/usr/local/sbin/user-defaults
 
 [Install]
