--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,6 @@
 
 override_dh_install:
 	dh_install
-	chmod +x debian/sch-scripts.install
+	chmod +x debian/sch-scripts.postinst
 	chmod +x share/sch-scripts/*
 	echo "__version__='$(DEBVERS)'" > "$(CURDIR)/debian/sch-scripts/usr/share/sch-scripts/version.py"
