--- a/debian/rules
+++ b/debian/rules
@@ -1,11 +1,20 @@
 #!/usr/bin/make -f
 
+DEBVERS := $(shell dpkg-parsechangelog | sed -n -e 's/^Version: //p')
+export PYBUILD_INTERPRETERS=python3
+
 %:
 	dh $@
 
 override_dh_install:
-	chmod +x debian/install.sh
 	dh_install
-	chmod +x debian/sch-scripts.postinst
-	chmod +x share/sch-scripts/*
 	echo "__version__='$(DEBVERS)'" > "$(CURDIR)/debian/sch-scripts/usr/share/sch-scripts/version.py"
+
+override_dh_installinit:
+	dh_installinit --name=shared-folders
+
+override_dh_installgsettings:
+	dh_installgsettings --priority=50
+
+override_dh_systemd_enable:
+	dh_systemd_enable --name=shared-folders
