--- a/etc/xdg/autostart/shared-folders.desktop
+++ b/etc/xdg/autostart/shared-folders.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
-Name=Shared Folders
-Name[el]=Κοινόχρηστοι Φάκελοι
+Name=Shared folders
+Name[el]=Κοινόχρηστοι φάκελοι
 Comment=Creates shared folders symlinks for the groups the user is a member of
 Comment[el]=Δημιουργεί συντομεύσεις για κοινόχρηστους φακέλους
-Exec=/usr/share/sch-scripts/create-symlinks
+Exec=/usr/share/sch-scripts/scripts/create-symlinks
 Icon=folders-publicshare
 Terminal=false
 Type=Application
