--- a/debian/rules
+++ b/debian/rules
@@ -12,9 +12,11 @@ override_dh_install:
 
 override_dh_installinit:
 	dh_installinit --name=shared-folders
+	dh_installinit --name=user-defaults
 
 override_dh_installgsettings:
 	dh_installgsettings --priority=50
 
 override_dh_systemd_enable:
 	dh_systemd_enable --name=shared-folders
+	dh_systemd_enable --name=user-defaults
