--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Depends: ${misc:Depends},
  policykit-1,
  python3:any,
  python3-gi,
+ sch-archive-keyring,
  setpriv | util-linux (>= 2.32.1-0.2)
 Recommends: adobe-flashplugin,
  bindfs,
