modified:   debian/changelog 	modified:   debian/control 	modified:   sbin/sch-scripts 	modified:   sbin/shared-folders 	modified:   share/applications/sch-scripts.desktop 	new file:   share/backgrounds/1ek-volou.png 	deleted:    share/backgrounds/sch-walls/1ek-volou_dark.png 	deleted:    share/backgrounds/sch-walls/1ek-volou_light.png 	modified:   share/sch-scripts/scripts/initial-setup.sh

--- a/share/applications/sch-scripts.desktop
+++ b/share/applications/sch-scripts.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Classroom administration
+Name=Classroom Administration
 Name[el]=Διαχείριση ΣΕΠΕΗΥ
-Comment=sch-scripts: a collection of scripts for classroom administration
-Comment[el]=sch-scripts: μια συλλογή από βοηθήματα για τη διαχείριση εργαστηρίου υπολογιστών
+Comment=sch-scripts: A collection of scripts for classroom administration
+Comment[el]=sch-scripts: Μια συλλογή από βοηθήματα για τη διαχείριση εργαστηρίου υπολογιστών
 TryExec=/usr/sbin/sch-scripts
 Exec=/usr/sbin/sch-scripts
 Icon=sch-scripts
