--- a/.github/workflows/debian-package.yml
+++ b/.github/workflows/debian-package.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -25,37 +27,40 @@ jobs:
 
     - name: Build Debian Package
       run: |
-        mkdir -p /tmp/debian-package
-        cd $GITHUB_WORKSPACE
-        VERSION=$(dpkg-parsechangelog --show-field Version | sed 's/-.*//')
-        TARBALL="sch-scripts_${VERSION}.orig.tar.gz"
-        git archive --format=tar.gz --prefix=sch-scripts/ -o $TARBALL HEAD
-        # Create a temporary directory to build the package in
+        # Define variables for paths
+        OUTPUT_DIR=/tmp/debian-package
         BUILD_DIR="$GITHUB_WORKSPACE/build-dir"
+        SOURCE_DIR="$GITHUB_WORKSPACE/sch-scripts"
+        PACKAGE_NAME="sch-scripts"
+        
+        mkdir -p "$OUTPUT_DIR"
+        cd "$GITHUB_WORKSPACE"
+        VERSION=$(dpkg-parsechangelog --show-field Version | sed 's/-.*//')
+        TARBALL="${PACKAGE_NAME}_${VERSION}.orig.tar.gz"
+        git archive --format=tar.gz --prefix="${PACKAGE_NAME}/" -o "$TARBALL" HEAD
         mkdir -p "$BUILD_DIR"
-        # Move the source tarball to the build directory.  debuild expects it in the parent
         mv "$TARBALL" "$BUILD_DIR"
-        # Copy the source code to the build directory.
-        cp -r "$GITHUB_WORKSPACE/sch-scripts" "$BUILD_DIR"
-        # Change to the directory containing the debian directory.
-        cd "$BUILD_DIR/sch-scripts"
-        # Run debuild from the correct location.
+        cp -r "$SOURCE_DIR" "$BUILD_DIR"
+        cd "$BUILD_DIR/${PACKAGE_NAME}"
         debuild -us -uc
-        # Move the resulting .deb files to the desired output directory
-        find .. -name "*.deb" -exec mv {} /tmp/debian-package/ \;
+        find .. -name "*.deb" -exec mv {} "$OUTPUT_DIR/" \;
 
     - name: List Directories
       run: |
-        ls -al /tmp/debian-package
-        ls -al $GITHUB_WORKSPACE
-        ls -al $GITHUB_WORKSPACE/build-dir
-        ls -al $GITHUB_WORKSPACE/build-dir/sch-scripts
+        echo "Output Directory:"
+        ls -al "$OUTPUT_DIR"
+        echo "GitHub Workspace:"
+        ls -al "$GITHUB_WORKSPACE"
+        echo "Build Directory:"
+        ls -al "$GITHUB_WORKSPACE/build-dir"
+        echo "Build Directory/Package:"
+        ls -al "$GITHUB_WORKSPACE/build-dir/${PACKAGE_NAME}"
 
     - name: Upload Debian Package
       uses: actions/upload-artifact@v4
       with:
         name: sch-scripts-deb
-        path: /tmp/debian-package/*.deb
+        path: "$OUTPUT_DIR/*.deb"
         if-no-files-found: error
         compression-level: 6
         overwrite: false
